@@ -1,3 +1,8 @@
+2005-02-19  Steffen Macke <Steffen_Macke@dorsch.com.jo>
+
+	* script/fitting_boq.sql: Fixed two spelling mistakes and the BOQ
+	generation for connection detail 61
+
 2005-01-31  Steffen Macke <Steffen_Macke@dorsch.com.jo>
 
 	* sample/fitting.shp:
